--- a/libraries/liblmdb/Makefile.msvc
+++ b/libraries/liblmdb/Makefile.msvc
@@ -9,8 +9,8 @@ DEBUG=0
 !endif
 
 !if !defined(MFLAGS)
-!if !$(DLL)
-MFLAGS=
+!if $(DEBUG)
+MFLAGS = -MDd
 !else
 MFLAGS = -MD
 !endif
@@ -20,21 +20,19 @@ CC=cl.exe -nologo -c
 LINK=link.exe -nologo
 AR=lib.exe -nologo
 
-LINKFLAGS = -NXCOMPAT
-CFLAGS = -I windows -D "_CRT_SECURE_NO_WARNINGS" -D "_CRT_NONSTDC_NO_DEPRECATE" -D "_UNICODE" -D "UNICODE"
+LINKFLAGS = -NXCOMPAT $(EXTRA_LINKFLAGS)
+CFLAGS = -I windows -D "_CRT_SECURE_NO_WARNINGS" -D "_CRT_NONSTDC_NO_DEPRECATE" -D "_UNICODE" -D "UNICODE" $(EXTRA_CFLAGS)
 WARN_CFLAGS = -W3 -wd"4996" -wd"4146" -wd"4703"
 !if $(DEBUG)
-OPTIMFLAGS = -FD -O2 -EHsc -Zi -D "_DEBUG" -D "MDB_DEBUG"
-DEBUGFLAGS = -Zi
+OPTIMFLAGS = -FD -Od -EHsc -Zi -D "_DEBUG" -D "MDB_DEBUG"
 LINKFLAGS = $(LINKFLAGS) -DEBUG
 !else
 OPTIMFLAGS = -FD -O2 -EHsc -Zi -GL -D "_NDEBUG"
-DEBUGFLAGS = -Zi
 LINKFLAGS = $(LINKFLAGS) -RELEASE -LTCG
 !endif
 CFLAGS = $(CFLAGS) $(MFLAGS) $(WARN_CFLAGS) $(OPTIMFLAGS)
 
-LIBS_SYS	= kernel32.lib user32.lib Advapi32.lib
+LIBS_SYS	= kernel32.lib user32.lib advapi32.lib
 IHDRS	= lmdb.h
 LIB_STATIC	= lmdb.lib
 LIB_DYNAMIC	= liblmdb.lib
@@ -51,7 +49,17 @@ TESTS	= mtest.exe mtest2.exe mtest3.exe mtest4.exe mtest5.exe
 TESTS	= $(TESTS) mtest6.exe
 !endif
 PROGS	= $(IPROGS) $(TESTS)
+
 all:	$(ILIBS) $(PROGS)
+
+clean:
+	if exist testdb rmdir /s /q testdb
+	del /f /q *.obj *.exe *.dll *.lib *.pdb
+
+test:	all
+	if exist testdb rmdir /s /q testdb
+	mkdir testdb
+	.\mtest && .\mdb_stat testdb
 
 mdb_stat.exe: mdb_stat.obj $(LIB_LINK)
 mdb_copy.exe: mdb_copy.obj $(LIB_LINK)
@@ -62,15 +70,10 @@ mtest2.exe:	mtest2.obj $(LIB_LINK)
 mtest3.exe:	mtest3.obj $(LIB_LINK)
 mtest4.exe:	mtest4.obj $(LIB_LINK)
 mtest5.exe:	mtest5.obj $(LIB_LINK)
-mtest6.exe:	mtest6.obj lmdb.lib
+mtest6.exe:	mtest6.obj $(LIB_STATIC)
 
-clean:
-	del /f /q $(PROGS) *.obj *.exe *.dll *.lib *.pdb
-
-test:	all
-	if exist testdb rmdir /s /q testdb
-	mkdir testdb
-	.\mtest && .\mdb_stat testdb
+.obj.exe:
+	$(LINK) $(LINKFLAGS) $(LIBS_SYS) -out:$@ $**
 
 lmdb.lib:	mdb.obj midl.obj
 	$(AR) -out:$@ $**
@@ -80,13 +83,8 @@ liblmdb.dll:	lmdb.lib windows/lmdb.def
 	$(LINK) $(LINKFLAGS) $(LIBS_SYS) -dll -out:$@ -def:windows/lmdb.def lmdb.lib
 
 mdb.obj: mdb.c lmdb.h midl.h
-	$(CC) $(CFLAGS) mdb.c
-
 midl.obj: midl.c midl.h
-	$(CC) $(CFLAGS) midl.c
 
-%.obj:	%.c lmdb.h
-	$(CC) $(CFLAGS) $*.c
-
-.obj.exe:
-	$(LINK) $(LINKFLAGS) $(LIBS_SYS) -out:$@ $**
+# nmake predefined inference rules
+#.c.obj::
+#	$(CC) $(CFLAGS) /c $<
